--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/SILPH-spa
 spring.datasource.username=postgres
-spring.datasource.password=kokkolosa
+spring.datasource.password=postgres
 #==================================
 # = Webserver configuration
 #==================================
